202101091
Restauration format vidéo

202012010
Ajout entrée HDMI Usb (expérimental)

202011210
Correction problème détection carte son si rpi en FR

202011010
Désactivation Bluetooth

202010310
Modification tempo kill fbi

202010010
New builds based on Raspios 2020-08-20
Increase Lime PTT Delay to 8 seconds
Allow H264 PiCam 16:9
Continue to display RX params with no signal

202009170
Changement nom Argos en Sarsat
Sarsat: affichage de la trame dès décodage
Sarsat: affichage des CRC

202009040
RX Minitiouner réglage séparé scan satellite et terrestre

202009020
Correction transpondeur leandvb avec limesdr

202008260
Correction réinitialisation RTLSDR RX Leandvb

202008200
Détection clé RTL RX Argos
Différence entre Début et fin automatique 100KHz Argos

202008170
Ajout décodage balise détresse 406 de F4EHY

202007310
Add support for B910 WebCam ID 046d:0823

202007240
Load new Waveshare 35a overlay
Re-enable dist-upgrade

202007230
Bugfix 7 inch screen after dist-upgrade
Don't dist-upgrade because of no 3.5 inch screen support

202007012
Add vlc with ffmpeg receive player
Overlay of parameters on vlc ffmpeg
Enabled MER display for DVB-S reception
Large MER on UDP player page
Receive freq entered and displayed in MHz
Bugfix intermittent stream display fault
Bugfix tuner power control

202006070
Switch default audio output from Menu 3
EasyCap Comp Video display with audio
C920 audio available in Comp Vid out TX mode
PTT pin set for LimeDVB TX modes when selected from console

202005110
Improve EasyCap audio

202004302
Preserve Lime Calibration Status during updates

202004301
Graceful shutdown for VLC

202004300
LongMynd LNB voltage control and MiniTiouner Express support
VLC Player for limited H265 display in LongMynd
Revised Comp Video monitor (display of EasyCap input)
Pi Cam and C920 monitor modes
Screen capture for LongMynd, Comp Video, Pi Cam
Screen capture for C920, TS and Stream Viewers
Automatic graphics restart after graphics crash